[gd_scene load_steps=2 format=3 uid="uid://cqhck1g474s4f"]

[ext_resource type="Script" path="res://Scripts/GameBase.gd" id="1_vtydb"]

[node name="Control" type="Control"]
layout_mode = 3
anchor_left = 0.007
anchor_top = 0.012
anchor_right = 1.0
anchor_bottom = 0.963
offset_left = -8.064
offset_top = -7.776
offset_bottom = 15.976
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vtydb")

[node name="DialogueBox" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.007
anchor_top = 0.7
anchor_right = 0.993
anchor_bottom = 1.0
offset_left = -0.0640001
offset_top = -3.05176e-05
offset_right = 0.0639648

[node name="DialoguePanel" type="Panel" parent="DialogueBox"]
layout_mode = 2

[node name="DialogueText" type="TextEdit" parent="DialogueBox/DialoguePanel"]
light_mask = 0
use_parent_material = true
layout_mode = 2
anchor_left = 0.014
anchor_top = 0.25
anchor_right = 0.986
anchor_bottom = 0.88
offset_left = 0.0960016
offset_right = -1.09583
offset_bottom = 0.039978
grow_horizontal = 2
grow_vertical = 2
placeholder_text = "Placeholder Text"

[node name="Narrator" type="TextEdit" parent="DialogueBox/DialoguePanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.021
anchor_top = 0.042
anchor_right = 0.12
anchor_bottom = 0.25
offset_left = 0.144001
offset_top = -0.0639715
offset_right = -0.319992
offset_bottom = 2.28882e-05
placeholder_text = "Narrator"

[node name="PlayerControls" type="HBoxContainer" parent="."]
layout_mode = 2
anchor_left = 0.007
anchor_top = 0.6
anchor_right = 0.222
anchor_bottom = 0.7
offset_left = -0.0640001
offset_right = 0.255981
offset_bottom = -3.05176e-05

[node name="AutoPlay" type="Button" parent="PlayerControls"]
layout_mode = 2
size_flags_horizontal = 3
text = "AP"

[node name="Rewind" type="Button" parent="PlayerControls"]
layout_mode = 2
text = "Rewind"

[node name="PlayerInput" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.444
anchor_top = 0.3
anchor_right = 0.556
anchor_bottom = 0.689
offset_left = 0.511963
offset_right = 1.48792
offset_bottom = 0.039978
grow_horizontal = 2
grow_vertical = 2

[node name="Button" type="Button" parent="PlayerInput"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 20.0
text = "Worked?"

[node name="Button2" type="Button" parent="PlayerInput"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 20.0
text = "Working?"

[node name="Button3" type="Button" parent="PlayerInput"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 20.0
text = "Is this thing on?"

[node name="MenuPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.007
anchor_top = 0.012
anchor_right = 0.118
anchor_bottom = 0.407
offset_left = -0.0640001
offset_top = 0.224
offset_right = 0.0639954
offset_bottom = 0.264008
grow_horizontal = 2
grow_vertical = 2

[node name="Continue" type="Button" parent="MenuPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.062
anchor_top = 0.066
anchor_right = 0.68
anchor_bottom = 0.187
offset_left = 0.0639997
offset_top = 0.104
offset_right = -0.0400009
offset_bottom = 0.127998
text = "Continue"

[node name="New Game" type="Button" parent="MenuPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.062
anchor_top = 0.219
anchor_right = 0.789
anchor_bottom = 0.34
offset_left = 0.0639997
offset_top = -0.064003
offset_right = 0.00799561
offset_bottom = -0.0400009
text = "New Game"

[node name="Load Game" type="Button" parent="MenuPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.062
anchor_top = 0.375
anchor_right = 0.812
anchor_bottom = 0.5
offset_left = 0.0639997
offset_right = 0.0639954
text = "Load Game"

[node name="Gallery" type="Button" parent="MenuPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.062
anchor_top = 0.531
anchor_right = 0.555
anchor_bottom = 0.652
offset_left = 0.0639997
offset_top = 0.0639954
offset_right = -0.0400009
offset_bottom = 0.0879974
text = "Gallery"

[node name="Settings" type="Button" parent="MenuPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.062
anchor_top = 0.691
anchor_right = 0.609
anchor_bottom = 0.812
offset_left = 0.0639997
offset_top = 0.103989
offset_right = 0.0479965
offset_bottom = 0.127991
text = "Settings"

[node name="Exit" type="Button" parent="MenuPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.062
anchor_top = 0.844
anchor_right = 0.352
anchor_bottom = 0.969
offset_left = 0.0639997
offset_top = -0.0640106
offset_right = -0.0560036
offset_bottom = -1.06401
text = "Exit"

[node name="OptionsPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.118
anchor_top = 0.012
anchor_right = 0.451
anchor_bottom = 0.412
offset_left = 0.0639954
offset_top = 0.32
offset_right = 0.447937
offset_bottom = 0.319977

[node name="MasterVol" type="HBoxContainer" parent="OptionsPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.042
anchor_top = 0.187
anchor_right = 0.979
anchor_bottom = 0.344
offset_left = -0.128002
offset_top = 0.127998
offset_right = 0.0639954
offset_bottom = -0.064003

[node name="MasterText" type="TextEdit" parent="OptionsPanel/MasterVol"]
layout_mode = 2
size_flags_horizontal = 3
text = "Master"

[node name="MasterSlider" type="HSlider" parent="OptionsPanel/MasterVol"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0
min_value = -50.0
max_value = 10.0

[node name="AmbianceVol" type="HBoxContainer" parent="OptionsPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.042
anchor_top = 0.375
anchor_right = 0.979
anchor_bottom = 0.531
offset_left = -0.128002
offset_right = 0.0639954
offset_bottom = 0.0639954

[node name="AmbianceText" type="TextEdit" parent="OptionsPanel/AmbianceVol"]
layout_mode = 2
size_flags_horizontal = 3
text = "Ambiance"

[node name="AmbianceSlider" type="HSlider" parent="OptionsPanel/AmbianceVol"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0
min_value = -50.0
max_value = 10.0

[node name="SoundVol" type="HBoxContainer" parent="OptionsPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.042
anchor_top = 0.562
anchor_right = 0.979
anchor_bottom = 0.719
offset_left = -0.128002
offset_top = 0.127991
offset_right = 0.0639954
offset_bottom = -0.0640106

[node name="SoundText" type="TextEdit" parent="OptionsPanel/SoundVol"]
layout_mode = 2
size_flags_horizontal = 3
text = "Sound"

[node name="SoundSlider" type="HSlider" parent="OptionsPanel/SoundVol"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0
min_value = -50.0
max_value = 10.0

[node name="MusicVol" type="HBoxContainer" parent="OptionsPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.042
anchor_top = 0.75
anchor_right = 0.979
anchor_bottom = 0.906
offset_left = -0.128002
offset_top = -1.52588e-05
offset_right = 0.0639954
offset_bottom = 0.0639954

[node name="MusicText" type="TextEdit" parent="OptionsPanel/MusicVol"]
layout_mode = 2
size_flags_horizontal = 3
text = "Music"

[node name="MusicSlider" type="HSlider" parent="OptionsPanel/MusicVol"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0
min_value = -50.0
max_value = 10.0

[node name="PausePanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.014
anchor_top = 0.025
anchor_right = 0.118
anchor_bottom = 0.5
offset_left = -8.128
offset_top = -8.0
offset_right = 0.0639954

[node name="ResumeButton" type="Button" parent="PausePanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.08
anchor_top = 0.043
anchor_right = 0.56
anchor_bottom = 0.13
offset_top = 0.176
offset_bottom = 0.159996
text = "Resume"

[node name="SaveButton" type="Button" parent="PausePanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.08
anchor_top = 0.174
anchor_right = 0.56
anchor_bottom = 0.261
offset_top = -0.0320053
offset_bottom = -0.0480042
text = "Save"

[node name="Load Game" type="Button" parent="PausePanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.08
anchor_top = 0.304
anchor_right = 0.56
anchor_bottom = 0.391
offset_top = 0.127991
offset_bottom = 0.111984
text = "Load"

[node name="Gallery" type="Button" parent="PausePanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.08
anchor_top = 0.435
anchor_right = 0.56
anchor_bottom = 0.522
offset_top = -0.0800171
offset_bottom = -0.0960083
text = "Gallery"

[node name="Settings" type="Button" parent="PausePanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.08
anchor_top = 0.565
anchor_right = 0.56
anchor_bottom = 0.649
offset_top = 0.0800018
offset_bottom = 0.167984
text = "Settings"

[node name="Main Menu" type="Button" parent="PausePanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.08
anchor_top = 0.696
anchor_right = 0.56
anchor_bottom = 0.783
offset_top = -0.128021
offset_bottom = -0.144012
text = "Main Menu"

[connection signal="pressed" from="PlayerControls/AutoPlay" to="." method="APbutton"]
[connection signal="pressed" from="PlayerControls/Rewind" to="." method="Rewind"]
[connection signal="pressed" from="PlayerInput/Button" to="." method="PlayerButton1"]
[connection signal="pressed" from="PlayerInput/Button2" to="." method="PlayerButton2"]
[connection signal="pressed" from="PlayerInput/Button3" to="." method="PlayerButton3"]
[connection signal="pressed" from="MenuPanel/Continue" to="." method="Continue"]
[connection signal="pressed" from="MenuPanel/New Game" to="." method="NewGame"]
[connection signal="pressed" from="MenuPanel/Load Game" to="." method="Load"]
[connection signal="pressed" from="MenuPanel/Gallery" to="." method="Gallery"]
[connection signal="pressed" from="MenuPanel/Settings" to="." method="Settings"]
[connection signal="pressed" from="MenuPanel/Exit" to="." method="Exit"]
[connection signal="value_changed" from="OptionsPanel/MasterVol/MasterSlider" to="." method="MasterVolume"]
[connection signal="value_changed" from="OptionsPanel/AmbianceVol/AmbianceSlider" to="." method="AmbianceVolume"]
[connection signal="value_changed" from="OptionsPanel/SoundVol/SoundSlider" to="." method="SoundVolume"]
[connection signal="value_changed" from="OptionsPanel/MusicVol/MusicSlider" to="." method="MusicVolume"]
[connection signal="pressed" from="PausePanel/ResumeButton" to="." method="Resume"]
[connection signal="pressed" from="PausePanel/SaveButton" to="." method="Save"]
[connection signal="pressed" from="PausePanel/Load Game" to="." method="Load"]
[connection signal="pressed" from="PausePanel/Gallery" to="." method="Gallery"]
[connection signal="pressed" from="PausePanel/Settings" to="." method="Settings"]
[connection signal="pressed" from="PausePanel/Main Menu" to="." method="MainMenu"]
